--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "zomato": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
