--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hbs": "^4.0.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "netflix-unofficial-api": "^1.0.9",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
